<resources>
    <string name="app_name">Contador1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="pulsaciones">Pulsaciones</string>
    <string name="incrementar">Incrementar</string>
    <string name="resetear">Resetear</string>
    <string name="text_View">TextView</string>
    <string name="Decrementar" />
    <string name="titulo">TituloTexto</string>
    <string name="contador">ContadorTexto</string>
    <string name="contadorTexto" />
    <string name="TituloTexto">Contador</string>
    <string name="Incrementar">+</string>
    <string name="decrementar">-</string>
</resources>