<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="100dp">

        <TextView
            android:id="@+id/tituloTexto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TituloTexto" />

        <TextView
            android:id="@+id/contadorTexto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contadorTexto"
            android:textSize="96sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_first"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/Incrementar"
            android:textSize="70dp" />

        <Space
            android:layout_width="150dp"
            android:layout_height="0dp"></Space>

        <Button
            android:id="@+id/button_two"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/decrementar"
            android:textSize="70dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="100dp"
        android:weightSum="9">

        <Button
            android:id="@+id/button_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/resetear"
            tools:ignore="Suspicious0dp" />

        <EditText
            android:id="@+id/n_reseteo"
            android:layout_width="72sp"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:gravity="center_horizontal"
            android:hint="0"
            android:inputType="numberSigned"
            android:minHeight="48dp" />

        <CheckBox
            android:id="@+id/negativos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Conteo negativo"
            android:textSize="12sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>